--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,12 +1,11 @@
 :root {
-
+  --text-primary: white;
+  --text-secondary: #B3B3B3;
+  --bg-primary: linear-gradient(135deg, #4b0082, #000);
 }
 
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  background: var(--bg-primary);
 }
 
 
@@ -14,4 +13,10 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
