--- a/src/app/components/information/information.scss
+++ b/src/app/components/information/information.scss
@@ -32,11 +32,7 @@
             text-align: start;
             display: flex;
             align-items: center;
-
-            img{
-                width: 30px;
-                height: 30px;
-            }
+            gap: 8px;
         }
     }
 }
